Canary/Istio/2-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-app-v2
  namespace: staging-test
spec:
  # In native way you change the traffic manually by changing num of replicas
  replicas: 1 
  selector:
    matchLabels:
      app: canary-app
      version: v2
  template:
    metadata:
      labels:
        app: canary-app
        version: v2
        istio: monitor
    spec:
      containers:
      - name: canary-app
        image: aputra/myapp-lesson155:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
