Canary/Istio/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app
  namespace: staging-test
spec:
  selector:
    app: canary-app
  ports:
    - name: http
      port: 8080          # Port that the service exposes
